# cfgsync

./: Cargo.toml  LICENSE  README.md  TODO
src/: cli.rs  config.rs  error.rs  git.rs  lib.rs  main.rs  model.rs  sync.rs
src/cli/: mod.rs
src/cli/commands/: add.rs  configure.rs  list.rs  mod.rs  push.rs  rm.rs  stage.rs
tests/: integration.rs
