[package]
authors = ["Jacek Chmiel <jacek@chmiel.cc>"]
edition = "2021"
name = "cfgsync"
version = "0.1.0"

[lib]
name = "cfgsync"
path = "src/lib.rs"

[[bin]]
name = "cfgsync"
path = "src/main.rs"

[dependencies]
dirs = "4.0"
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0.0"
thiserror = "1.0.0"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "3.1", features = ["derive"] }
duct = "0.13"
hostname = "0.3.1"
shellexpand = "2.1.0"
tempdir = "0.3.7" # todo: use only in tests
